--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <img src="imgs/hij-logo-homepage.png" alt="H.I.J. Logo" class="logo-hero-image">
                 </div>
                 <h1 class="hero-title">SPEEL MEE BIJ HET H.I.J.!</h1>
-                <p class="hero-subtitle">Het gezelligste jeugdorkest van Voorburg en ver daarbuiten! Muziek maken, nieuwe vrienden maken en optreden op de meest verrassende plekken.</p>
+                <p class="hero-subtitle">Het gezelligste jeugdorkest van Voorburg en ver daarbuiten! 
+                    Muziek maken, nieuwe vrienden maken en optreden op de meest verrassende plekken.</p>
                 <div class="hero-cta">
                     <a href="#lid-worden" class="btn btn-primary">Lid Worden</a>
                     <a href="#agenda" class="btn btn-secondary">Bekijk Agenda</a>
