--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <p class="event-time">10:00 - 10:45</p>
                         <p class="event-location">Franse Kerkstraat 24, Voorburg</p>
                         <p class="event-description">Onderdeel van het Huygens Festival. Gratis toegang, wel graag aanmelden!</p>
-                        <a href="mailto:bestuur@hijjeugdorkest.nl" class="btn btn-small">Meer info</a>
+                        <a href="/cdn-cgi/l/email-protection#b2d0d7c1c6c7c7c0f2dadbd8d8d7c7d5d6ddc0d9d7c1c69cdcde" class="btn btn-small">Meer info</a>
                     </div>
                 </div>
 
@@ -208,7 +208,7 @@
                         <p class="event-time">11:00</p>
                         <p class="event-location">Bibliotheek Leidschenveen, Den Haag</p>
                         <p class="event-description">Gratis toegang, reservering vereist</p>
-                        <a href="mailto:bestuur@hijjeugdorkest.nl" class="btn btn-small">Reserveer</a>
+                        <a href="/cdn-cgi/l/email-protection#5b393e282f2e2e291b333231313e2e3c3f3429303e282f753537" class="btn btn-small">Reserveer</a>
                     </div>
                 </div>
 
@@ -222,7 +222,7 @@
                         <p class="event-time">11:00</p>
                         <p class="event-location">Bibliotheek Rijswijk</p>
                         <p class="event-description">Gratis toegang, reservering vereist</p>
-                        <a href="mailto:bestuur@hijjeugdorkest.nl" class="btn btn-small">Reserveer</a>
+                        <a href="/cdn-cgi/l/email-protection#ceacabbdbabbbbbc8ea6a7a4a4abbba9aaa1bca5abbdbae0a0a2" class="btn btn-small">Reserveer</a>
                     </div>
                 </div>
             </div>
@@ -249,7 +249,7 @@
                             <span class="step-number">1</span>
                             <div class="step-content">
                                 <h4>Mail ons</h4>
-                                <p>Stuur een email naar <a href="mailto:bestuur@hijjeugdorkest.nl">bestuur@hijjeugdorkest.nl</a></p>
+                                <p>Stuur een email naar <a href="/cdn-cgi/l/email-protection#a9cbccdadddcdcdbe9c1c0c3c3ccdccecdc6dbc2ccdadd87c7c5"><span class="__cf_email__" data-cfemail="c9abacbabdbcbcbb89a1a0a3a3acbcaeada6bba2acbabde7a7a5">[email&#160;protected]</span></a></p>
                             </div>
                         </div>
                         <div class="step">
@@ -270,8 +270,8 @@
 
                     <div class="contact-info">
                         <h4>Contact</h4>
-                        <p><strong>Aanmelden:</strong> <a href="mailto:bestuur@hijjeugdorkest.nl">bestuur@hijjeugdorkest.nl</a></p>
-                        <p><strong>Algemene vragen:</strong> <a href="mailto:info@hijjeugdorkest.nl">info@hijjeugdorkest.nl</a></p>
+                        <p><strong>Aanmelden:</strong> <a href="/cdn-cgi/l/email-protection#1e7c7b6d6a6b6b6c5e767774747b6b797a716c757b6d6a307072"><span class="__cf_email__" data-cfemail="0664637572737374466e6f6c6c6373616269746d63757228686a">[email&#160;protected]</span></a></p>
+                        <p><strong>Algemene vragen:</strong> <a href="/cdn-cgi/l/email-protection#177e797178577f7e7d7d7262707378657c72646339797b"><span class="__cf_email__" data-cfemail="563f383039163e3f3c3c3323313239243d33252278383a">[email&#160;protected]</span></a></p>
                     </div>
                 </div>
 
@@ -447,11 +447,11 @@
                     <h3>Contactgegevens</h3>
                     <div class="contact-item">
                         <h4>Aanmelden lidmaatschap</h4>
-                        <p><a href="mailto:bestuur@hijjeugdorkest.nl">bestuur@hijjeugdorkest.nl</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection#d0b2b5a3a4a5a5a290b8b9babab5a5b7b4bfa2bbb5a3a4febebc"><span class="__cf_email__" data-cfemail="0567607671707077456d6c6f6f607062616a776e6076712b6b69">[email&#160;protected]</span></a></p>
                     </div>
                     <div class="contact-item">
                         <h4>Algemene informatie</h4>
-                        <p><a href="mailto:info@hijjeugdorkest.nl">info@hijjeugdorkest.nl</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection#8ae3e4ece5cae2e3e0e0efffedeee5f8e1eff9fea4e4e6"><span class="__cf_email__" data-cfemail="41282f272e0129282b2b243426252e332a2432356f2f2d">[email&#160;protected]</span></a></p>
                     </div>
                     <div class="contact-item">
                         <h4>Volg ons</h4>
@@ -488,7 +488,7 @@
                 </div>
                 <div class="footer-social">
                     <a href="https://www.instagram.com/hijjeugdorkest/" target="_blank" class="social-link">Instagram</a>
-                    <a href="mailto:info@hijjeugdorkest.nl" class="social-link">Email</a>
+                    <a href="/cdn-cgi/l/email-protection#4d24232b220d2524272728382a29223f26283e39632321" class="social-link">Email</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -498,6 +498,6 @@
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"99c5df1f0bdc0eac","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.9.1","token":"e72945439c264b3b85d2e3b689102d27"}' crossorigin="anonymous"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"99c5fa2af8b87a96","serverTiming":{"name":{"cfExtPri":true,"cfEdge":true,"cfOrigin":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"version":"2025.9.1","token":"e72945439c264b3b85d2e3b689102d27"}' crossorigin="anonymous"></script>
 </body>
 </html>
