--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <span>Optredens op verrassende locaties</span>
                         </div>
                         <div class="feature">
-                            <span class="feature-icon">🎮</span>
+                            <span class="feature-icon">♟️</span>
                             <span>Spelletjes tijdens de pauze</span>
                         </div>
                         <div class="feature">
@@ -119,7 +119,7 @@
             <div class="about-story">
                 <h3>Ons Verhaal</h3>
                 <p>Het H.I.J. is ontstaan uit de liefde voor muziek en de wens om jongeren samen te brengen door muziek. We geloven dat muziek maken niet alleen over techniek gaat, maar vooral over plezier maken, vrienden maken en samen iets moois creëren.</p>
-                <p>Of je nu violist bent, drummer, of als je pas een paar jaar speelt - bij ons is iedereen welkom! We hebben momenteel koper(blazers), hout(blazers), violen (ook altviool) en cello's, maar we zijn altijd op zoek naar meer brass instrumenten, percussie en extra contrabassisten.</p>
+                <p>Of je nu violist bent, drummer, of als je pas een paar jaar speelt - bij ons is iedereen welkom! We hebben momenteel koper(blazers), hout(blazers), violen (ook altviool) en cello's, maar we zijn altijd op zoek naar meer blaasinstrumenten, percussie en extra contrabassisten.</p>
             </div>
         </div>
     </section>
@@ -157,7 +157,7 @@
                         <ul class="expectations-list">
                             <li>🎵 <strong>Afwisselend repertoire:</strong> Klassiek, film muziek, wereld muziek</li>
                             <li>🎪 <strong>Spannende optredens:</strong> In parken, bibliotheken, kerken, festivals</li>
-                            <li>🎮 <strong>Leuke pauzes:</strong> Spelletjes zoals Weerwolven, Hitster en meer</li>
+                            <li>♟️ <strong>Leuke pauzes:</strong> Spelletjes zoals Weerwolven, Hitster en meer</li>
                             <li>🌳 <strong>Gezellige sfeer:</strong> Jaarlijks repetitie weekend</li>
                             <li>📚 <strong>Leren van elkaar:</strong> Samen muziek maken en groeien</li>
                         </ul>
@@ -169,7 +169,7 @@
                             <li>Leeftijd: 8-22 jaar</li>
                             <li>Een paar jaar speelervaring op je instrument</li>
                             <li>Eigen instrument en muziekstandaard meenemen</li>
-                            <li>Twee gratis proeflessen beschikbaar</li>
+                            <li>Twee gratis proefrepetities beschikbaar</li>
                             <li>Contributie: €250 per jaar</li>
                         </ul>
                         <p class="small-note">Tijdens schoolvakanties repeteren we niet</p>
@@ -244,7 +244,7 @@
             <div class="join-content">
                 <div class="join-card">
                     <h3>Klaar om bij ons te komen spelen?</h3>
-                    <p>Geef je op voor twee gratis proeflessen en ervaar zelf hoe gezellig het bij het H.I.J. is!</p>
+                    <p>Geef je op voor twee gratis proefrepetities en ervaar zelf hoe gezellig het bij het H.I.J. is!</p>
                     
                     <div class="join-steps">
                         <div class="step">
@@ -265,7 +265,7 @@
                             <span class="step-number">3</span>
                             <div class="step-content">
                                 <h4>Beslissen</h4>
-                                <p>Na twee proeflessen weet je of het H.I.J. iets voor jou is!</p>
+                                <p>Na twee proefrepetities weet je of het H.I.J. iets voor jou is!</p>
                             </div>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
 
                 <div class="faq-item">
                     <h3>Kan ik eerst proberen?</h3>
-                    <p>Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe gezellig het bij ons is.</p>
+                    <p>Jazeker! Je krijgt twee gratis proefrepetities om te ervaren hoe gezellig het bij ons is.</p>
                 </div>
 
                 <div class="faq-item">
