--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <a href="#over-ons" class="nav-link">Over Ons</a>
                 <a href="#repetities" class="nav-link">Repetities</a>
                 <a href="#agenda" class="nav-link">Agenda</a>
-                <a href="#lid-worden" class="nav-link cta-nav">Lid Worden</a>
                 <a href="#galerij" class="nav-link">Galerij</a>
                 <a href="#contact" class="nav-link">Contact</a>
+                <a href="#lid-worden" class="nav-link cta-nav">Lid Worden</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -257,7 +257,7 @@
                         <div class="step">
                             <span class="step-number">2</span>
                             <div class="step-content">
-                                <h4>Proefles</h4>
+                                <h4>Proefrepetitie</h4>
                                 <p>Kom een keer proberen tijdens onze zaterdagse repetitie</p>
                             </div>
                         </div>
