--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haags Instrumentaal Jeugdensemble (H.I.J.) - Speel Mee!</title>
-    <meta name="description" content="Het H.I.J. is een gezellige jeugd uit Voorburg voor muzikanten van 8-22 jaar. Elke zaterdag repeteren we en treden we op op verrassende locaties!">
+    <meta name="description" content="Het H.I.J. is een gezellig jeugd uit Voorburg voor muzikanten van 8-22 jaar. Elke zaterdag repeteren we en treden we op op verrassende locaties!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
