--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haags Instrumentaal Jeugdensemble (H.I.J.) - Speel Mee!</title>
-    <meta name="description" content="Het H.I.J. is een gezellig jeugd uit Voorburg voor muzikanten van 8-22 jaar. Elke zaterdag repeteren we en treden we op op verrassende locaties!">
+    <meta name="description" content="Het H.I.J. is een gezellig jeugdorkest uit Voorburg voor muzikanten van 8-22 jaar. Elke zaterdag repeteren we en treden we op op verrassende locaties!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -118,7 +118,8 @@
             <div class="about-story">
                 <h3>Ons Verhaal</h3>
                 <p>Het H.I.J. is ontstaan uit de liefde voor muziek en de wens om jongeren samen te brengen door muziek. We geloven dat muziek maken niet alleen over techniek gaat, maar vooral over plezier maken, vrienden maken en samen iets moois creëren.</p>
-                <p>Of je nu violist bent, drummer, of als je pas een paar jaar speelt - bij ons is iedereen welkom! We hebben momenteel koper(blazers), hout(blazers), violen (ook altviool) en cello's, maar we zijn altijd op zoek naar meer blaasinstrumenten, percussie en extra contrabassisten.</p>
+                <p>Of je nu violist bent, drummer, of pas een paar jaar speelt - bij ons is iedereen welkom! We hebben momenteel koperblazers, violen, cello's, een contrabas, gitaren en een piano.
+Maar we zijn altijd op zoek naar meer blazers en strijkers!</p>
             </div>
         </div>
     </section>
