--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                 <div class="about-card">
                     <h3>Onze Dirigent</h3>
                     <p><strong>Jurgen van Groningen Schinkel</strong> leidt ons met passie en creativiteit. Hij componeert speciaal voor ons unieke stukken en zorgt ervoor dat elke repetitie een avontuur is.</p>
+                    <p></p>
+                    <h3>Ons orkest in cijfers</h3>
                     <div class="stats">
                         <div class="stat">
                             <span class="stat-number">~15</span>
